refactor : 비즈니스 로직과 출력로직 분리